# tapf-minischeme

./: .gitignore  LICENSE  README.md  stack.yaml  tapf-minischeme.cabal
src/: Main.hs  Sexpr.hs
