name:                tapf-minischeme
version:             0.1.0.0
synopsis:            An interpreter for a minimal Scheme-like language
homepage:            https://github.com/pbv/tapf-minischeme
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2018 Pedro Vasconcelos
category:            Languages
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minischeme
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Sexpr
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       parsec
